// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package thinkit;

option cc_generic_services = false;

// Mode types for how the SUT interfaces are connected.
// DISCONNECTED      - Nothing is plugged into the interface.
// LOOPBACK          - A loopback is plugged into the interface.
// CONTROL_INTERFACE - The interface is connected to another switch or device
//                     that can send or receive packets.
// TRAFFIC_GENERATOR - The interface is connected to a traffic generator
//                     (e.g. Ixia).
enum InterfaceMode {
  UNKNOWN_MODE = 0;
  DISCONNECTED = 1;
  LOOPBACK = 2;
  CONTROL_INTERFACE = 3;
  TRAFFIC_GENERATOR = 4;
}

// This message represents the mode of interface(s) and the number of
// which are required.
message InterfaceRequirement {
  InterfaceMode interface_mode = 1;
  int32 count = 2;
}

// This message represents interface(s) requirement for a test.
message TestRequirements {
  repeated InterfaceRequirement interface_requirements = 1;
}
